--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/shivanshu-singh-1739a6190/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://stubbornblood.github.io/YT-clone/">Website</a>
       <p class="K">© 2018 Stubborn-Blood.</p>
